[package]
name = "websocket"
version = "0.22.0"
authors = ["cyderize <admin@cyderize.org>", "Michael Eden <themichaeleden@gmail.com>"]

description = "A WebSocket (RFC6455) library for Rust."

documentation = "https://docs.rs/websocket/"
repository = "https://github.com/websockets-rs/rust-websocket"

readme = "README.md"

keywords = ["websocket", "websockets", "rfc6455", "async", "tokio"]
categories = ["asynchronous", "network-programming", "web-programming", "web-programming::websocket"]

license = "MIT"

[dependencies]
hyper = "^0.10.6"
unicase = "1.0"
url = "1.0"
bitflags = "0.9"
rand = "0.5"
byteorder = "1.0"
sha1 = "0.6"
base64 = "0.9"
futures = { version = "0.1", optional = true }
tokio = { version = "0.1", optional = true }
tokio-tls = { version = "0.2.0", optional = true }
bytes = { version = "0.4", optional = true }
native-tls = { version = "0.2.1", optional = true }

tokio-rustls = { git = "https://github.com/passchaos/tokio-rustls", branch = "v0.8.1-sdk-tmp", optional = true }
rustls = { version = "0.15.0", optional = true }
webpki = { version = "0.19.0", optional = true }
webpki-roots = { version = "0.16.0", optional = true }

lazy_static = "1.2.0"
log = "0.4"

[dev-dependencies]
futures-cpupool = "0.1"

[features]
default = ["sync", "sync-rustls", "async", "async-rustls"]
sync = []
sync-rustls = ["rustls", "webpki", "webpki-roots", "sync"]
sync-ssl = ["native-tls", "sync"]
async = ["tokio", "bytes", "futures"]
async-rustls = ["rustls", "tokio-rustls", "webpki", "webpki-roots", "async"]
async-ssl = ["native-tls", "tokio-tls", "async"]
nightly = ["hyper/nightly"]

[replace]
"webpki:0.19.0" = { git = "https://github.com/passchaos/webpki", branch = "v0.19.0-sdk-tmp" }